fixed card bottom padding on mobile

--- a/style.css
+++ b/style.css
@@ -408,7 +408,7 @@ footer a:hover {
     .card {
         width: 90%;
         height: 425px;
-        padding-bottom: 25px;
+        padding-bottom: 10%;
     }
 }
 
